--- a/Client/package.json
+++ b/Client/package.json
@@ -9,7 +9,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "connect-livereload": "^0.5.4",
     "grunt-bower-concat": "^1.0.0",
+    "grunt-contrib-connect": "^0.11.2",
+    "grunt-contrib-watch": "^0.6.1",
     "grunt-serve": "^0.1.6"
   }
 }
