--- a/Client/bower.json
+++ b/Client/bower.json
@@ -1,23 +1,17 @@
 {
-  "name": "Client",
-  "homepage": "https://github.com/weichweich/Pi-Timeswitch",
-  "authors": [
-    "Albrecht Weiche <weich@posteo.de>"
-  ],
-  "description": "",
-  "main": "",
-  "moduleType": [],
-  "license": "MIT",
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ],
+  "name": "switching-site",
+  "version": "0.0.0",
+  "private": true,
   "dependencies": {
-    "knockout": "^3.4.0",
-    "jQuery": "^2.2.1",
-    "bootstrap": "^3.3.6"
+    "crossroads": "~0.12.0",
+    "hasher": "~1.2.0",
+    "requirejs": "~2.1.11",
+    "requirejs-text": "~2.0.10",
+    "knockout": "~3.3.0-alpha",
+    "knockout-projections": "~1.1.0",
+    "jquery": "^2.2.3"
+  },
+  "resolutions": {
+    "knockout": "~3.3.0-alpha"
   }
 }
