--- a/Client/package.json
+++ b/Client/package.json
@@ -1,18 +1,29 @@
 {
-  "name": "timeswitch-client",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
+  "name": "switching-site",
+  "version": "0.0.0",
   "devDependencies": {
-    "connect-livereload": "^0.5.4",
-    "grunt-bower-concat": "^1.0.0",
-    "grunt-contrib-connect": "^0.11.2",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-serve": "^0.1.6"
+    "chalk": "~0.4.0",
+    "deeply": "~0.1.0",
+    "event-stream": "~3.1.0",
+    "gulp": "^3.6.2",
+    "gulp-babel": "^5.2.1",
+    "gulp-clean": "~0.2.4",
+    "gulp-concat": "~2.2.0",
+    "gulp-connect": "^2.2.0",
+    "gulp-filter": "^3.0.1",
+    "gulp-html-replace": "~1.0.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-replace": "~0.2.0",
+    "gulp-requirejs-bundler": "^0.1.1",
+    "gulp-uglify": "~0.2.1",
+    "jasmine-core": "^2.3.4",
+    "karma": "^0.13.10",
+    "karma-babel-preprocessor": "^5.2.2",
+    "karma-chrome-launcher": "^0.2.1",
+    "karma-jasmine": "^0.3.6",
+    "karma-requireglobal-preprocessor": "^0.0.0",
+    "karma-requirejs": "^0.2.2",
+    "object-assign": "^4.0.1",
+    "requirejs": "^2.1.11"
   }
 }
