--- a/Client/bower.json
+++ b/Client/bower.json
@@ -1,17 +1,25 @@
 {
-  "name": "switching-site",
-  "version": "0.0.0",
-  "private": true,
+  "name": "timeswitch-client",
+  "description": "",
+  "main": "gulpfile.js",
+  "authors": [
+    "Albrecht Weiche <weiche48@gmail.com>"
+  ],
+  "license": "MIT",
+  "homepage": "https://github.com/weichweich/Pi-Timeswitch",
+  "moduleType": [],
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ],
   "dependencies": {
-    "crossroads": "~0.12.0",
-    "hasher": "~1.2.0",
-    "requirejs": "~2.1.11",
-    "requirejs-text": "~2.0.10",
-    "knockout": "~3.3.0-alpha",
-    "knockout-projections": "~1.1.0",
-    "jquery": "^2.2.3"
-  },
-  "resolutions": {
-    "knockout": "~3.3.0-alpha"
+    "knockout": "^3.4.0",
+    "crossroads": "^0.12.2",
+    "hasher": "^1.2.0",
+    "jQuery": "^2.2.3",
+    "jsonapi-datastore": "^0.4.0-beta"
   }
 }
