--- a/Client/package.json
+++ b/Client/package.json
@@ -1,29 +1,40 @@
 {
-  "name": "switching-site",
-  "version": "0.0.0",
+  "name": "timeswitch-client",
+  "version": "1.0.0",
+  "description": "",
+  "main": "gulpfile.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "browserify": {
+    "transform": [
+      "browserify-global-shim"
+    ]
+  },
+  "browserify-global-shim": {
+    "jQuery": "$",
+    "knockout": "ko",
+    "crossroads": "crossroads",
+    "hasher": "hasher",
+    "jsonapi-datastore": "JsonApiDataStore"
+  },
   "devDependencies": {
-    "chalk": "~0.4.0",
-    "deeply": "~0.1.0",
-    "event-stream": "~3.1.0",
-    "gulp": "^3.6.2",
-    "gulp-babel": "^5.2.1",
-    "gulp-clean": "~0.2.4",
-    "gulp-concat": "~2.2.0",
-    "gulp-connect": "^2.2.0",
-    "gulp-filter": "^3.0.1",
-    "gulp-html-replace": "~1.0.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-replace": "~0.2.0",
-    "gulp-requirejs-bundler": "^0.1.1",
-    "gulp-uglify": "~0.2.1",
-    "jasmine-core": "^2.3.4",
-    "karma": "^0.13.10",
-    "karma-babel-preprocessor": "^5.2.2",
-    "karma-chrome-launcher": "^0.2.1",
-    "karma-jasmine": "^0.3.6",
-    "karma-requireglobal-preprocessor": "^0.0.0",
-    "karma-requirejs": "^0.2.2",
-    "object-assign": "^4.0.1",
-    "requirejs": "^2.1.11"
-  }
+    "bower": "^1.7.9",
+    "browserify": "^13.0.0",
+    "browserify-global-shim": "^1.0.3",
+    "gulp": "^3.9.1",
+    "gulp-changed": "^1.3.0",
+    "gulp-clean": "^0.3.2",
+    "gulp-concat": "^2.6.0",
+    "gulp-connect": "^4.0.0",
+    "gulp-uglify": "^1.5.3",
+    "gulp-watch": "^4.3.5",
+    "http-proxy-middleware": "^0.14.0",
+    "main-bower-files": "^2.13.0",
+    "stringify": "^5.1.0",
+    "vinyl-source-stream": "^1.1.0"
+  },
+  "dependencies": {}
 }
