--- a/Client/bower.json
+++ b/Client/bower.json
@@ -20,6 +20,7 @@
     "crossroads": "^0.12.2",
     "hasher": "^1.2.0",
     "jQuery": "^2.2.3",
-    "jsonapi-datastore": "^0.4.0-beta"
+    "jsonapi-datastore": "^0.4.0-beta",
+    "vex": "^2.3.4"
   }
 }
