--- a/Client/package.json
+++ b/Client/package.json
@@ -18,7 +18,8 @@
     "knockout": "ko",
     "crossroads": "crossroads",
     "hasher": "hasher",
-    "jsonapi-datastore": "JsonApiDataStore"
+    "jsonapi-datastore": "JsonApiDataStore",
+    "vex": "vex"
   },
   "devDependencies": {
     "bower": "^1.7.9",
@@ -29,6 +30,8 @@
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^4.0.0",
+    "gulp-debug": "^2.1.2",
+    "gulp-filter": "^4.0.0",
     "gulp-uglify": "^1.5.3",
     "gulp-watch": "^4.3.5",
     "http-proxy-middleware": "^0.14.0",
