--- a/Client/package.json
+++ b/Client/package.json
@@ -29,10 +29,10 @@
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
+    "cherrytree": "^2.3.1",
     "crossroads": "^0.12.2",
     "devour-client": "^1.3.0",
     "hasher": "^1.2.0",
-    "jQuery": "^1.7.4",
     "jquery": "^2.2.3",
     "knockout": "^3.4.0",
     "ts-promise": "^0.3.0"
