fixed flickering pages whene router is transisting sequence table updates whene sequences are added

--- a/Client/package.json
+++ b/Client/package.json
@@ -35,6 +35,7 @@
     "hasher": "^1.2.0",
     "jquery": "^2.2.3",
     "knockout": "^3.4.0",
+    "lodash": "^4.17.4",
     "ts-promise": "^0.3.0"
   }
 }
