Seperated timer and webserver renamed switch_manager to manager

--- a/Flask-Server/timeswitch.ini
+++ b/Flask-Server/timeswitch.ini
@@ -1,7 +1,6 @@
 [uwsgi]
-chdir = /home/pi/Pi-Timeswitch/Flask-Server
-wsgi-file = run.py
-module = run
+chdir = /home/pi/Flask-Server
+module = server
 callable = app
 
 master = true
@@ -15,3 +14,4 @@ chmod-socket= 664
 vacuum = true
 
 die-on-term = true
+daemonize=/var/log/uwsgi/timeswitch.log
