added make target to run frontend and backend. added make target for backend tests

--- a/Flask-Server/Makefile
+++ b/Flask-Server/Makefile
@@ -1,6 +1,7 @@
 # Setup the virtual environment
 PYTHON="venv/bin/python"
 PIP="venv/bin/pip"
+TIMESWITCH="venv/bin/timeswitch"
 
 venv/bin/activate: requirements.txt
 	test -d venv || virtualenv -p python3 venv
@@ -13,7 +14,7 @@ venv: venv/bin/activate
 DATABASE_FILENAME="schedule.sqlite"
 
 $(DATABASE_FILENAME): venv
-	timeswitch --create --file $(DATABASE_FILENAME)
+	$(TIMESWITCH) --create --file $(DATABASE_FILENAME)
 
 # Setup developer environment
 
@@ -22,10 +23,22 @@ install_editable:
 
 install_dev: | install_editable $(DATABASE_FILENAME)
 
+# Run commands
+
 run_dev: install_dev $(DATABASE_FILENAME)
-	timeswitch --file $(DATABASE_FILENAME)
+	$(TIMESWITCH) --file $(DATABASE_FILENAME)
+
+run_dev_static: install_dev $(DATABASE_FILENAME)
+	$(TIMESWITCH) --file $(DATABASE_FILENAME) --static 'static'
+
+# Build lrelease package
 
 dist: venv
 	$(PYTHON) setup.py sdist
 
-.PHONY : install_dev install_editable run_dev dist
+# Run tests
+
+test:
+	pytest --ignore=docs
+
+.PHONY : install_dev install_editable run_dev dist test
