--- a/Flask-Server/requirements.txt
+++ b/Flask-Server/requirements.txt
@@ -17,9 +17,11 @@ MarkupSafe==0.23
 marshmallow==2.2.1
 marshmallow-jsonapi==0.3.0
 mimerender==0.5.5
+py==1.4.34
 pyasn1==0.2.3
 pycparser==2.17
 PyJWT==1.4.2
+pytest==3.1.2
 python-dateutil==2.4.2
 python-mimeparse==0.1.4
 pytz==2015.7
