--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,9 @@ language: python
 python:
   - "3.4"
   - "3.5"
-install: make backend_dist
+install:
+  - make backend_dist
+  - pip install coveralls
 script: make test
+after_success:
+  - coveralls
