--- a/Flask-Server/requirements.txt
+++ b/Flask-Server/requirements.txt
@@ -1,33 +1,11 @@
-aniso8601==1.1.0
-astroid==1.3.8
 bcrypt==3.1.3
-Cerberus==0.8.1
-cffi==1.9.1
-click==6.7
-cryptography==1.7.2
-Events==0.2.1
+cryptography
 Flask==0.12
 Flask-RESTful==0.3.4
 Flask-SQLAlchemy==2.1
-idna==2.4
-itsdangerous==0.24
-Jinja2==2.9.5
-logilab-common==1.0.2
-MarkupSafe==0.23
 marshmallow==2.2.1
 marshmallow-jsonapi==0.3.0
-mimerender==0.5.5
-py==1.4.34
-pyasn1==0.2.3
-pycparser==2.17
-PyJWT==1.4.2
 pytest==3.1.2
 pytest-cov==2.5.1
-python-dateutil==2.4.2
-python-mimeparse==0.1.4
-pytz==2015.7
-simplejson==3.8.1
-six==1.9.0
 SQLAlchemy==1.1.6
-virtualenv==15.1.0
 Werkzeug==0.11.15
