--- a/Flask-Server/timeswitch.ini
+++ b/Flask-Server/timeswitch.ini
@@ -1,6 +1,6 @@
 [uwsgi]
-chdir = /home/pi/Flask-Server
-module = server
+chdir = /home/pi/dist/backend/
+module = wsgi
 callable = app
 
 master = true
@@ -15,3 +15,4 @@ vacuum = true
 
 die-on-term = true
 daemonize=/var/log/uwsgi/timeswitch.log
+pidfile = /tmp/timeswitch.pid
