--- a/Client/package.json
+++ b/Client/package.json
@@ -10,33 +10,33 @@
   "license": "ISC",
   "browserify": {},
   "devDependencies": {
-    "browserify": "^13.3.0",
-    "debug": "^2.2.0",
+    "browserify": "^16.1.1",
+    "debug": "^3.1.0",
     "gulp": "^3.9.1",
     "gulp-add-src": "^0.2.0",
-    "gulp-changed": "^1.3.0",
-    "gulp-clean": "^0.3.2",
+    "gulp-changed": "^3.2.0",
+    "gulp-clean": "^0.4.0",
     "gulp-concat": "^2.6.0",
-    "gulp-connect": "^4.0.0",
-    "gulp-debug": "^2.1.2",
-    "gulp-filter": "^4.0.0",
-    "gulp-uglify": "^1.5.3",
-    "gulp-watch": "^4.3.5",
-    "http-proxy-middleware": "^0.14.0",
+    "gulp-connect": "^5.5.0",
+    "gulp-debug": "^3.2.0",
+    "gulp-filter": "^5.1.0",
+    "gulp-uglify": "^3.0.0",
+    "gulp-watch": "^5.0.0",
+    "http-proxy-middleware": "^0.18.0",
     "stringify": "^5.1.0",
     "tsify": "^3.0.1",
     "typescript": "^2.2.1",
     "typing": "^0.1.9",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {
-    "cherrytree": "^2.3.1",
+    "cherrytree": "^2.4.1",
     "crossroads": "^0.12.2",
-    "devour-client": "^1.3.0",
+    "devour-client": "^2.0.8",
     "hasher": "^1.2.0",
-    "jquery": "^2.2.3",
-    "knockout": "^3.4.0",
+    "jquery": "^3.3.1",
+    "knockout": "^3.5.0-beta",
     "lodash": "^4.17.4",
-    "ts-promise": "^0.3.0"
+    "ts-promise": "^1.0.0"
   }
 }
